fix z-index, header code preview

--- a/cocoblockly/assets/cocoblockly.css
+++ b/cocoblockly/assets/cocoblockly.css
@@ -120,6 +120,7 @@ div#simulator {
     -webkit-user-select: none;
     user-select: none;
     padding: 0px;
+    z-index: 999;
 }
 
 
@@ -129,7 +130,7 @@ div#simulator .close {
 }
 
 #simulator>.head {
-    background-color: #fff;
+    background-color: #F7F7F7;
     border-bottom: 1px solid #dadada;
     /* height: 42px; */
     padding-left: 20px;
@@ -144,7 +145,7 @@ div#simulator .close {
 
 #simulator>.code-preview-content {
   position: relative;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 #simulator>.code-preview-content>.diagram {
